# ChangeLog for app-editors/xemacs
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/xemacs/ChangeLog,v 1.142 2010/11/08 19:50:39 graaff Exp $

  08 Nov 2010; Hans de Graaff <graaff@gentoo.org> xemacs-21.4.22-r1.ebuild,
  xemacs-21.4.22-r2.ebuild, xemacs-21.5.29-r2.ebuild:
  media-libs/jpeg → virtual/jpeg

  10 Oct 2010; Ulrich Mueller <ulm@gentoo.org> xemacs-21.4.22-r1.ebuild,
  xemacs-21.4.22-r2.ebuild, xemacs-21.5.29-r2.ebuild:
  Fix openmotif dependency.

*xemacs-21.4.22-r2 (28 Sep 2010)

  28 Sep 2010; Hans de Graaff <graaff@gentoo.org> +xemacs-21.4.22-r2.ebuild,
  +files/xemacs-21.4.22-deprecated-ldap.patch,
  -files/xemacs-21.4.22-implicit-pointer-conversion.patch:
  Properly fix the implicit pointer conversion problem in a similar way as
  it is fixed in xemacs 21.5. Bump revision to make sure everyone will have
  a properly compiled version.

  30 Aug 2010; Hans de Graaff <graaff@gentoo.org> xemacs-21.4.22-r1.ebuild:
  Revert hwoarang's patch. It is not clear what it being fixed, and the fix
  itself looks suspicious.

  24 Aug 2010; Markos Chandras <hwoarang@gentoo.org>
  xemacs-21.4.22-r1.ebuild,
  +files/xemacs-21.4.22-implicit-pointer-conversion.patch:
  Use patch to fix implicit pointer conversion which lead to compilation
  failures in 64bit arches

  17 Jun 2010; Patrick Lauer <patrick@gentoo.org> xemacs-21.4.22-r1.ebuild,
  xemacs-21.5.29-r2.ebuild:
  Migrating away from deprecated postgres virtuals

  23 May 2010; Ulrich Mueller <ulm@gentoo.org> xemacs-21.5.29-r2.ebuild:
  Require same USE flag setting for the openmotif dependency, to prevent
  a compilation failure that occurs with openmotif[xft] and xemacs[-xft].

  08 Mar 2010; Samuli Suominen <ssuominen@gentoo.org>
  xemacs-21.5.29-r2.ebuild:
  Unrestrict libpng depend to allow installation of 1.4, thanks to Wizzleby
  for testing.

  23 Jan 2010; Hans de Graaff <graaff@gentoo.org> xemacs-21.4.22-r1.ebuild,