@@ -14,15 +14,17 @@ AUX xemacs.desktop 1080 RMD160 9ddca2747abcc4e7a8bb305740942f62daa73ba6 SHA1 6a3
 DIST NeXT_XEmacs.tar.gz 39571 RMD160 3c2cedf75e4ece412031b20a15614a78367393f4 SHA1 619912734b1a1fae5115941b904d41beb4765b47 SHA256 35a0d988fd4ee801572639a99798571aa9fad140ddbed1455565ae9d5e0086c7
 DIST xemacs-21.4.22.tar.gz 8357931 RMD160 f7d71d3607c3301760df8f7ae5a93d1d37df56ba SHA1 24ed9b13d80c53c06bba60c7bb68387f692b7373 SHA256 87fb7633106625935105e821eb8fe65e521a3de44d45fe864109779c3a8e4bd1
 DIST xemacs-21.5.29.tar.gz 15453810 RMD160 96b951fd44915b3b73a9d69a7ab80c1237fdecc7 SHA1 0815975a2a7e9720d1a8fe0b347b0f977786e2a5 SHA256 071f84a2572eb70d4ae5cfc079f8f4c199371621f1855833a55a9577dffc0186
+DIST xemacs-21.5.30.tar.gz 15500732 RMD160 0cca64db9f03c8f2052be743a5b0bb0531776430 SHA1 cdef683d52ea0abd9d71d06f3b30582bc1b51445 SHA256 cc9573faea6e8442965b47ab011e647f4e0313c985cf4f9b751c52ce4767cc97
 EBUILD xemacs-21.4.22-r1.ebuild 6580 RMD160 15346e733445c92fd5fee6905aaacbf5989eb2a3 SHA1 22ee08f497b4b26ce2b960bbea1b5c41513c306e SHA256 865bc0dbec4272ae29f4b1fbfb230eff59ef4b4ebe84860546506062657a1ab5
 EBUILD xemacs-21.4.22-r2.ebuild 6713 RMD160 33c045f05568d54fd9d4a61c02e9926a77ea6c79 SHA1 3db56a012c9a592811b219a7766f7b844c2bf040 SHA256 3d73184fadd999071bbdb1c08d7e4b7a22cbd8661c757073109c0fe037301daa
 EBUILD xemacs-21.5.29-r2.ebuild 7070 RMD160 1b2df3401a94b3e8b58344d0995d976b785b5b35 SHA1 859185214924b587b88bc23d91787669848420b6 SHA256 846a6f733db597d85f5f88f7bc1ac7c2af607c7533a284d19c0e3f53ff1fa32a
-MISC ChangeLog 24699 RMD160 22cb879a89cb0c9eec5e8ba7a0984d3e719b3422 SHA1 9fdc7b0472b22f51c65a609b0285748bb007bd82 SHA256 e499ef27b4f69eee54ad8bf2e42bef89f6fa53da3e7f92f3375573490a3867dd
+EBUILD xemacs-21.5.30.ebuild 6896 RMD160 f7629a51ab84c8f68022d63e30a2142697ebd2fc SHA1 d5fd77c46ff92be063b97fca7bc9a7452cb2fc7e SHA256 535e811f7780eb31731932d95138882c9509b7ef4a1755a097f17bd05ecb1b94
+MISC ChangeLog 24847 RMD160 17d1a76fe9467d81e3608f8d0bc6343914366eaa SHA1 35ed3741285d8f76472487d2a2be0392df2965b6 SHA256 7ad5f4bc3e0499426b61bbc1284a06356a84c41958653335d5e60d939be326f2
 MISC metadata.xml 711 RMD160 fc8a32ef389e34f90c14f2c26d75ac3cdc7e28a0 SHA1 b56f6ef2c44d658e3505f97c1686e52a40e4ee00 SHA256 abb7f5df5077d65ee8df0ed47e57faabe561de5bd09493912a3f06ef695f8f58
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.16 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAkzYVJwACgkQZihJkut28SunCgEAg6KwbYS3YuZoqFs/QKm1lTVd
-QOKJX8KuIaP8tIv3FeIA+gNCrATL5uKGCGyCiD3Ifh9BUyDtI+Q0Dc1nYyHliCxg
-=FL5x
+iF4EAREIAAYFAk24WjYACgkQrnu0mw69JkomsAD/WXkSpmRJjZS/uLA5Wxe3KPhp
+DhEBqWFOGfP5/oXx2gsA/R7eS1+mXGHoHVtYCm+fF9AnFyM7VXikNQnpIkZzlx8r
+=lSYk
 -----END PGP SIGNATURE-----
